# admin-sep

./: Cargo.toml  Makefile  README.md
admin/: Cargo.toml  Makefile
admin/src/: lib.rs  test.rs
admin_sep/: Cargo.toml
admin_sep/src/: administratable.rs  constructor.rs  lib.rs  upgradable.rs
admin_v2/: Cargo.toml  Makefile
admin_v2/src/: auth.rs  lib.rs  test.rs
