[workspace]
resolver = "2"
members = ["admin_sep", "admin", "admin_v2"]

[workspace.dependencies]
soroban-sdk = { git = "https://github.com/theahaco/rs-soroban-sdk", rev = "367e4efc2462c841b046aeac0dda8fcee05b790f" }

[profile.contracts]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true


[profile.release-with-logs]
inherits = "release"
debug-assertions = true
