[workspace]
resolver = "2"
members = ["admin_sep", "admin", "admin_v2"]

[workspace.dependencies]
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "99134976ee1d31fa1fa5db8a63bd1ea66b8abda8" }

[profile.contracts]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true


[profile.release-with-logs]
inherits = "release"
debug-assertions = true
