[workspace]
resolver = "2"
members = ["admin_sep", "admin", "admin_v2"]

[workspace.dependencies]
soroban-sdk = "23.4.0"

[profile.contracts]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true


[profile.release-with-logs]
inherits = "release"
debug-assertions = true
